--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/dist/output.css" rel="stylesheet" />
 
-    <link rel="icon" type="image/x-icon" href="src/img/favicon.png" />
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
 
     <title>Fit Yazılım</title>
   </head>
-  <body>
-    <h1 class="text-3xl font-bold underline text-blue-50">Hello world!</h1>
+  <body class="bg-black">
+    <h1 class="text-3xl font-bold underline text-gray-500">Hello world!</h1>
   </body>
 </html>
