--- a/src/login.html
+++ b/src/login.html
@@ -4,9 +4,31 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="src/img/favicon.png" />
+    <link href="/dist/output.css" rel="stylesheet" />
+
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
 
     <title>Fit Yazılım</title>
   </head>
-  <body></body>
+  <body class="bg-white">
+    <main class="w-full h-full flex justify-center">
+      <div class="flex flex-col pt-[20%]">
+        <div>
+          <img src="img/logo.png" class="w-56 h-56" alt="logo.png" />
+        </div>
+        <div>
+          <form>
+            <div class="bg-mal">
+              <input
+                type="text"
+                placeholder="Adınız Soyadınız"
+                class="bg-mal"
+              />
+            </div>
+          </form>
+          <div class="artboard phone-1">320×568</div>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
