--- a/src/login.html
+++ b/src/login.html
@@ -17,16 +17,7 @@
           <img src="img/logo.png" class="w-56 h-56" alt="logo.png" />
         </div>
         <div>
-          <form>
-            <div class="bg-mal">
-              <input
-                type="text"
-                placeholder="Adınız Soyadınız"
-                class="bg-mal"
-              />
-            </div>
-          </form>
-          <div class="artboard phone-1">320×568</div>
+          <input class="border border-red-500" />
         </div>
       </div>
     </main>
