--- a/src/login.html
+++ b/src/login.html
@@ -11,13 +11,15 @@
     <title>Fit Yazılım</title>
   </head>
   <body class="bg-white">
-    <main class="w-full h-full flex justify-center">
+    <main class="flex h-full w-full justify-center">
       <div class="flex flex-col pt-[20%]">
         <div>
-          <img src="img/logo.png" class="w-56 h-56" alt="logo.png" />
+          <img src="img/logo.png" class="h-56 w-56" alt="logo.png" />
         </div>
         <div>
-          <input class="border border-red-500" />
+          <input
+            class="rounded-lg border border-green-500 pl-2 pb-1 pt-1 focus:border-cyan-300 focus:outline-none"
+          />
         </div>
       </div>
     </main>
