--- a/src/login.html
+++ b/src/login.html
@@ -10,13 +10,15 @@
 
     <title>Fit Yazılım</title>
   </head>
+
+  <!--for logo to appear the same on all screens (<body class="bg-white">)-->
   <body class="bg-white">
     <main class="flex h-full w-full justify-center">
       <div class="flex flex-col pt-[20%]">
         <div>
           <img src="img/logo.png" class="h-56 w-56" alt="logo.png" />
         </div>
-        <div>
+        <div class="flex w-[100%] items-center justify-center text-center">
           <input
             class="rounded-lg border border-green-500 pl-2 pb-1 pt-1 focus:border-cyan-300 focus:outline-none"
           />
