--- a/src/login.html
+++ b/src/login.html
@@ -12,15 +12,24 @@
   </head>
 
   <!--for logo to appear the same on all screens (<body class="bg-white">)-->
-  <body class="bg-white">
-    <main class="flex h-full w-full justify-center">
-      <div class="flex flex-col pt-[20%]">
-        <div>
-          <img src="img/logo.png" class="h-56 w-56" alt="logo.png" />
+  <body class="bg-black">
+    <main class="flex justify-center pt-[10%]">
+      <div
+        class="flex flex-col items-center justify-center rounded-[40px] bg-white p-[10%]"
+      >
+        <div class="h-56 w-56">
+          <img src="img/logo.png" alt="logo.png" />
         </div>
-        <div class="flex w-[100%] items-center justify-center text-center">
+        <div class="flex flex-col">
+          <label class="pl-[5%]">Adınız</label>
           <input
-            class="rounded-lg border border-green-500 pl-2 pb-1 pt-1 focus:border-cyan-300 focus:outline-none"
+            class="rounded-full border border-green-500 pl-4 pr-4 pb-1 pt-1 focus:border-cyan-300 focus:outline-none"
+          />
+        </div>
+        <div class="pt-[10%] flex flex-col">
+          <label class="pl-[5%]">Soyadınız</label>
+          <input
+            class="rounded-full border border-green-500 pl-4 pr-4 pb-1 pt-1 focus:border-cyan-300 focus:outline-none"
           />
         </div>
       </div>
