--- a/src/login.html
+++ b/src/login.html
@@ -13,9 +13,9 @@
 
   <!--for logo to appear the same on all screens (<body class="bg-white">)-->
   <body class="bg-black">
-    <main class="flex justify-center pt-[10%]">
+    <main class="mt-[10%] flex justify-center md:p-0 p-[60px]">
       <div
-        class="flex flex-col items-center justify-center rounded-[40px] bg-white p-[10%]"
+        class="flex h-auto w-auto flex-col items-center justify-center rounded-[40px] bg-white md:pt-[20px] md:pr-[100px] md:pl-[100px] p-5"
       >
         <div class="h-56 w-56">
           <img src="img/logo.png" alt="logo.png" />
@@ -23,13 +23,29 @@
         <div class="flex flex-col">
           <label class="pl-[5%]">Adınız</label>
           <input
+            type="text"
             class="rounded-full border border-green-500 pl-4 pr-4 pb-1 pt-1 focus:border-cyan-300 focus:outline-none"
           />
         </div>
-        <div class="pt-[10%] flex flex-col">
+        <div class="flex flex-col pt-[10%]">
           <label class="pl-[5%]">Soyadınız</label>
           <input
+            type="text"
             class="rounded-full border border-green-500 pl-4 pr-4 pb-1 pt-1 focus:border-cyan-300 focus:outline-none"
+          />
+        </div>
+        <div class="flex flex-col pt-[10%]">
+          <label class="pl-[5%]">Şifreniz</label>
+          <input
+            type="password"
+            class="rounded-full border border-green-500 pl-4 pr-4 pb-1 pt-1 focus:border-cyan-300 focus:outline-none"
+          />
+        </div>
+        <div class="flex flex-col pt-[10%]">
+          <input
+            type="submit"
+            placeholder="Giriş Yap"
+            class="rounded-full border bg-green-500 text-white w-32 pl-4 pr-4 pb-1 pt-1 focus:bg-cyan-300"
           />
         </div>
       </div>
