--- a/src/login.html
+++ b/src/login.html
@@ -13,9 +13,9 @@
 
   <!--for logo to appear the same on all screens (<body class="bg-white">)-->
   <body class="bg-black">
-    <main class="mt-[10%] flex justify-center md:p-0 p-[60px]">
+    <main class="mt-[10%] flex justify-center p-[60px] md:p-0">
       <div
-        class="flex h-auto w-auto flex-col items-center justify-center rounded-[40px] bg-white md:pt-[20px] md:pr-[100px] md:pl-[100px] p-5"
+        class="flex h-auto w-auto flex-col items-center justify-center rounded-[40px] bg-white p-5 md:pt-[20px] md:pr-[100px] md:pl-[100px]"
       >
         <div class="h-56 w-56">
           <img src="img/logo.png" alt="logo.png" />
@@ -41,11 +41,19 @@
             class="rounded-full border border-green-500 pl-4 pr-4 pb-1 pt-1 focus:border-cyan-300 focus:outline-none"
           />
         </div>
-        <div class="flex flex-col pt-[10%]">
+        <div class="flex flex-row pt-[2%] w-[86%]">
+          <div class="w-[65%] flex text-left justify-start items-start">
+            <a href="#" class="text-xs">Şifremi Unuttum</a>
+          </div>
+          <div class="w-[50%] flex text-right justify-end items-end">
+            <a href="#" class="text-xs">Hesabım Yok</a>
+          </div>
+        </div>
+        <div class="flex flex-col pt-[15%]">
           <input
             type="submit"
-            placeholder="Giriş Yap"
-            class="rounded-full border bg-green-500 text-white w-32 pl-4 pr-4 pb-1 pt-1 focus:bg-cyan-300"
+            value="Giriş Yap"
+            class="w-32 rounded-full border bg-green-500 pl-4 pr-4 pb-1 pt-1 text-white hover:bg-cyan-300"
           />
         </div>
       </div>
