--- a/src/login.html
+++ b/src/login.html
@@ -41,15 +41,15 @@
             class="rounded-full border border-green-500 pl-4 pr-4 pb-1 pt-1 focus:border-cyan-300 focus:outline-none"
           />
         </div>
-        <div class="flex flex-row pt-[2%] w-[86%]">
+        <div class="flex flex-row pt-[5%] w-[86%]">
           <div class="w-[65%] flex text-left justify-start items-start">
-            <a href="#" class="text-xs">Şifremi Unuttum</a>
+            <a href="#" class="text-xs underline">Şifremi Unuttum</a>
           </div>
           <div class="w-[50%] flex text-right justify-end items-end">
-            <a href="#" class="text-xs">Hesabım Yok</a>
+            <a href="#" class="text-xs underline">Hesabım Yok</a>
           </div>
         </div>
-        <div class="flex flex-col pt-[15%]">
+        <div class="flex flex-col pt-[10%]">
           <input
             type="submit"
             value="Giriş Yap"
