--- a/src/signIn.html
+++ b/src/signIn.html
@@ -8,14 +8,14 @@
 
     <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
 
-    <title>Fit Yazılım</title>
+    <title>Giriş Yap | Fit Yazılım</title>
   </head>
 
   <!--for logo to appear the same on all screens (<body class="bg-white">)-->
   <body class="bg-black">
-    <main class="mt-[10%] flex justify-center p-[60px] md:p-0">
+    <main class="mt-[6%] flex justify-center p-[60px] md:p-0">
       <div
-        class="flex h-auto w-auto flex-col items-center justify-center rounded-[40px] bg-white p-5 md:pt-[20px] md:pr-[100px] md:pl-[100px]"
+        class="flex h-auto w-auto flex-col items-center rounded-[40px] bg-white p-5 md:pt-[20px] md:pr-[100px] md:pl-[100px]"
       >
         <div class="h-56 w-56">
           <img src="img/logo.png" alt="logo.png" />
@@ -41,11 +41,11 @@
             class="rounded-full border border-green-500 pl-4 pr-4 pb-1 pt-1 focus:border-cyan-300 focus:outline-none"
           />
         </div>
-        <div class="flex flex-row pt-[5%] w-[86%]">
-          <div class="w-[65%] flex text-left justify-start items-start">
+        <div class="flex w-[86%] flex-row pt-[5%]">
+          <div class="flex w-[65%] items-start justify-start text-left">
             <a href="#" class="text-xs underline">Şifremi Unuttum</a>
           </div>
-          <div class="w-[50%] flex text-right justify-end items-end">
+          <div class="flex w-[50%] items-end justify-end text-right">
             <a href="#" class="text-xs underline">Hesabım Yok</a>
           </div>
         </div>
@@ -55,6 +55,13 @@
             value="Giriş Yap"
             class="w-32 rounded-full border bg-green-500 pl-4 pr-4 pb-1 pt-1 text-white hover:bg-cyan-300"
           />
+        </div>
+        <div class="max-w-[210px] text-center mt-[15px]">
+          <p class="text-[10px] text-gray-400 font-bold italic">
+            * Eğer hesabınız yoksa herhangi bir şubemizden üyelik oluşturabilir ve
+            size verilen şifreyle (uygulama içerisinden değiştirmenizi tavsiye
+            ederiz) giriş yapabilirsiniz.
+          </p>
         </div>
       </div>
     </main>
