--- a/src/signIn.html
+++ b/src/signIn.html
@@ -15,7 +15,7 @@
   <body class="bg-black">
     <main class="mt-[6%] flex justify-center p-[60px] md:p-0">
       <div
-        class="flex h-auto w-auto flex-col items-center rounded-[40px] bg-white p-5 md:pt-[20px] md:pr-[100px] md:pl-[100px]"
+        class="flex h-auto w-auto flex-col items-center rounded-[40px] bg-white mobile-l:p-16 mobile-m:p-12 p-5 md:pt-[20px] md:pr-[80px] md:pl-[80px] pb-3"
       >
         <div class="h-56 w-56">
           <img src="img/logo.png" alt="logo.png" />
