--- a/src/signIn.html
+++ b/src/signIn.html
@@ -15,7 +15,7 @@
   <body class="bg-black">
     <main class="mt-[6%] flex justify-center p-[60px] md:p-0">
       <div
-        class="flex h-auto w-auto flex-col items-center rounded-[40px] bg-white mobile-l:p-16 mobile-m:p-12 p-5 md:pt-[20px] md:pr-[80px] md:pl-[80px] pb-3"
+        class="flex h-auto w-auto flex-col items-center rounded-[40px] bg-white mobile-l:p-16 mobile-m:p-12 p-5 md:pt-[20px] md:pr-[80px] md:pl-[80px] md:pb-6"
       >
         <div class="h-56 w-56">
           <img src="img/logo.png" alt="logo.png" />
@@ -58,9 +58,8 @@
         </div>
         <div class="max-w-[210px] text-center mt-[15px]">
           <p class="text-[10px] text-gray-400 font-bold italic">
-            * Eğer hesabınız yoksa herhangi bir şubemizden üyelik oluşturabilir ve
-            size verilen şifreyle (uygulama içerisinden değiştirmenizi tavsiye
-            ederiz) giriş yapabilirsiniz.
+             Hesabınız yoksa şubelerimizden üye olabilir ve
+            verilen şifreyle giriş yapabilirsiniz.
           </p>
         </div>
       </div>
