--- a/src/forgotPass.html
+++ b/src/forgotPass.html
@@ -8,7 +8,7 @@
 
     <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
 
-    <title>Kayıt Ol | Fit Yazılım</title>
+    <title>Şifremi Unuttum | Fit Yazılım</title>
 </head>
 <body>
     
