--- a/src/signIn.html
+++ b/src/signIn.html
@@ -15,7 +15,7 @@
   <body class="bg-black">
     <main class="mt-[6%] flex justify-center p-[60px] md:p-0">
       <div
-        class="flex h-auto w-auto flex-col items-center rounded-[40px] bg-white mobile-l:p-16 mobile-m:p-12 p-5 md:pt-[20px] md:pr-[80px] md:pl-[80px] md:pb-6"
+        class="flex h-auto w-auto flex-col items-center rounded-[40px] bg-white p-5 mobile-m:p-12 mobile-l:p-16 md:pt-[20px] md:pr-[80px] md:pl-[80px] md:pb-6"
       >
         <div class="h-56 w-56">
           <img src="img/logo.png" alt="logo.png" />
@@ -41,14 +41,11 @@
             class="rounded-full border border-green-500 pl-4 pr-4 pb-1 pt-1 focus:border-cyan-300 focus:outline-none"
           />
         </div>
-        <div class="flex w-[86%] flex-row pt-[5%]">
-          <div class="flex w-[65%] items-start justify-start text-left">
-            <a href="#" class="text-xs underline">Şifremi Unuttum</a>
-          </div>
-          <div class="flex w-[50%] items-end justify-end text-right">
-            <a href="#" class="text-xs underline">Hesabım Yok</a>
-          </div>
+
+        <div class="flex w-[85%] pt-[10px] items-end justify-end text-right">
+          <a href="./forgotPass.html" class="text-[10px] underline">Şifremi Unuttum</a>
         </div>
+
         <div class="flex flex-col pt-[10%]">
           <input
             type="submit"
@@ -56,10 +53,10 @@
             class="w-32 rounded-full border bg-green-500 pl-4 pr-4 pb-1 pt-1 text-white hover:bg-cyan-300"
           />
         </div>
-        <div class="max-w-[210px] text-center mt-[15px]">
-          <p class="text-[10px] text-gray-400 font-bold italic">
-             Hesabınız yoksa şubelerimizden üye olabilir ve
-            verilen şifreyle giriş yapabilirsiniz.
+        <div class="mt-[15px] max-w-[210px] text-center">
+          <p class="text-[10px] font-bold italic text-gray-400">
+            Hesabınız yoksa şubelerimizden üye olabilir ve verilen şifreyle
+            giriş yapabilirsiniz.
           </p>
         </div>
       </div>
