--- a/src/forgotPass.html
+++ b/src/forgotPass.html
@@ -1,16 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/dist/output.css" rel="stylesheet" />
 
     <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
 
     <title>Şifremi Unuttum | Fit Yazılım</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body class="bg-black">
+    <main class="mt-[9%] flex justify-center p-[60px] md:p-0">
+      <div
+        class="flex h-auto w-auto flex-col items-center rounded-[40px] bg-white p-5 mobile-m:p-12 mobile-l:p-16 md:pt-[20px] md:pr-[80px] md:pl-[80px] md:pb-6"
+      >
+        <div class="h-56 w-56">
+          <img src="img/logo.png" alt="logo.png" />
+        </div>
+        <div class="flex flex-col">
+          <label class="pl-[5%] pb-1">E-Mail Adresiniz</label>
+          <input
+            type="email"
+            class="rounded-full border border-green-500 pl-4 pr-4 pb-1 pt-1 focus:border-cyan-300 focus:outline-none"
+          />
+        </div>
+        <div class="flex flex-col pt-[10%]">
+          <label class="pl-[5%] pb-1">Yeni Şifreniz</label>
+          <input
+            type="password"
+            class="rounded-full border border-green-500 pl-4 pr-4 pb-1 pt-1 focus:border-cyan-300 focus:outline-none"
+          />
+        </div>
+        <div class="flex flex-col pt-[10%]">
+          <label class="pl-[5%] pb-1">Şifre Tekrar</label>
+          <input
+            type="password"
+            class="rounded-full border border-green-500 pl-4 pr-4 pb-1 pt-1 focus:border-cyan-300 focus:outline-none"
+          />
+        </div>
+
+        <div class="flex flex-col pt-[10%]">
+          <input
+            type="submit"
+            value="Onayla"
+            class="w-32 rounded-full border bg-green-500 pl-4 pr-4 pb-1 pt-1 text-white hover:bg-cyan-300"
+          />
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
