--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 
     <title>Fit Yazılım</title>
   </head>
-  <body class="bg-black">
+  <body>
     <h1 class="text-3xl font-bold underline text-gray-500">Hello world!</h1>
   </body>
 </html>
