--- a/src/signIn.html
+++ b/src/signIn.html
@@ -10,8 +10,6 @@
 
     <title>Giriş Yap | Fit Yazılım</title>
   </head>
-
-  <!--for logo to appear the same on all screens (<body class="bg-white">)-->
   <body class="bg-black">
     <main class="mt-[6%] flex justify-center p-[60px] md:p-0">
       <div
@@ -21,37 +19,41 @@
           <img src="img/logo.png" alt="logo.png" />
         </div>
         <div class="flex flex-col">
-          <label class="pl-[5%]">Adınız</label>
+          <label class="pl-[5%] pb-1">Adınız</label>
           <input
             type="text"
             class="rounded-full border border-green-500 pl-4 pr-4 pb-1 pt-1 focus:border-cyan-300 focus:outline-none"
           />
         </div>
         <div class="flex flex-col pt-[10%]">
-          <label class="pl-[5%]">Soyadınız</label>
+          <label class="pl-[5%] pb-1">Soyadınız</label>
           <input
             type="text"
             class="rounded-full border border-green-500 pl-4 pr-4 pb-1 pt-1 focus:border-cyan-300 focus:outline-none"
           />
         </div>
         <div class="flex flex-col pt-[10%]">
-          <label class="pl-[5%]">Şifreniz</label>
+          <label class="pl-[5%] pb-1">Şifreniz</label>
           <input
             type="password"
             class="rounded-full border border-green-500 pl-4 pr-4 pb-1 pt-1 focus:border-cyan-300 focus:outline-none"
           />
         </div>
 
-        <div class="flex w-[85%] pt-[10px] items-end justify-end text-right">
-          <a href="./forgotPass.html" class="text-[10px] underline">Şifremi Unuttum</a>
+        <div class="flex w-[85%] items-end justify-end pt-[10px] text-right">
+          <a href="./forgotPass.html" class="text-[11px] underline"
+            >Şifremi Unuttum</a
+          >
         </div>
 
         <div class="flex flex-col pt-[10%]">
-          <input
-            type="submit"
-            value="Giriş Yap"
-            class="w-32 rounded-full border bg-green-500 pl-4 pr-4 pb-1 pt-1 text-white hover:bg-cyan-300"
-          />
+          <a href="./index.html">
+            <input
+              type="submit"
+              value="Giriş Yap"
+              class="w-32 rounded-full border bg-green-500 pl-4 pr-4 pb-1 pt-1 text-white hover:bg-cyan-300"
+            />
+          </a>
         </div>
         <div class="mt-[15px] max-w-[210px] text-center">
           <p class="text-[10px] font-bold italic text-gray-400">
