--- a/src/forgotPass.html
+++ b/src/forgotPass.html
@@ -41,11 +41,13 @@
         </div>
 
         <div class="flex flex-col pt-[10%]">
-          <input
-            type="submit"
-            value="Onayla"
-            class="w-32 rounded-full border bg-green-500 pl-4 pr-4 pb-1 pt-1 text-white hover:bg-cyan-300"
-          />
+          <a href="./signIn.html">
+            <input
+              type="submit"
+              value="Onayla"
+              class="w-32 rounded-full border bg-green-500 pl-4 pr-4 pb-1 pt-1 text-white hover:bg-cyan-300"
+            />
+          </a>
         </div>
       </div>
     </main>
