--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,12 @@
     <title>Fit Yazılım</title>
   </head>
   <body>
-    
+    <header class="flex flex-row">
+      <div class="pl-[5%] pb-[50%] bg-black">
+        <a href="./index.html">
+          <img width="200" src="./img/logo.jpeg" alt="logo.jpeg" />
+        </a>
+      </div>
+    </header>
   </body>
 </html>
