--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <header class="flex flex-row">
-      <div class="pl-[5%] pb-[50%] bg-black">
+      <div class="pl-[3%] pt-[3%]">
         <a href="./index.html">
           <img width="200" src="./img/logo.jpeg" alt="logo.jpeg" />
         </a>
