--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,20 @@
     <title>Fit Yazılım</title>
   </head>
   <body>
-    <header class="flex flex-row">
-      <div class="pl-[3%] pt-[3%]">
+    <header class="flex flex-row bg-green-200 justify-center items-center text-center">
+      <!-- logo -->
+      <div class="w-[28%] pl-[3%]">
         <a href="./index.html">
-          <img width="200" src="./img/logo.jpeg" alt="logo.jpeg" />
+          <img width="200" src="./img/logo.png" alt="logo.png" />
         </a>
+      </div>
+      <!-- navbar -->
+      <nav class="w-[36%]">
+        <div class="h-32 w-32"></div>
+      </nav>
+      <!-- log in -->
+      <div class="w-[36%]">
+        <div class="h-32 w-32"></div>
       </div>
     </header>
   </body>
