--- a/src/signIn.html
+++ b/src/signIn.html
@@ -16,7 +16,7 @@
         class="flex h-auto w-auto flex-col items-center rounded-[40px] bg-white p-5 mobile-m:p-12 mobile-l:p-16 md:pt-[20px] md:pr-[80px] md:pl-[80px] md:pb-6"
       >
         <div class="mt-[30%] w-56">
-          <img src="img/logo.jpeg" alt="logo.jpeg" />
+          <img src="img/logo.png" alt="logo.png" />
         </div>
         <div class="mt-[28%] flex flex-col">
           <label class="pl-[5%] pb-1">Adınız</label>
