--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,9 @@
     <title>Fit Yazılım</title>
   </head>
   <body>
-    <header class="flex flex-row bg-green-200 justify-center items-center text-center">
+    <header
+      class="flex flex-row items-center justify-center bg-green-100 text-center min-h-[100px]"
+    >
       <!-- logo -->
       <div class="w-[28%] pl-[3%]">
         <a href="./index.html">
@@ -18,12 +20,18 @@
         </a>
       </div>
       <!-- navbar -->
-      <nav class="w-[36%]">
-        <div class="h-32 w-32"></div>
+      <nav class="flex w-[57%] items-center justify-center">
+        <ul class="flex flex-row">
+          <li>Hakkımızda</li>
+          <li>Hakkımızda</li>
+          <li>Hakkımızda</li>
+          <li>Hakkımızda</li>
+          <li>Hakkımızda</li>
+        </ul>
       </nav>
       <!-- log in -->
-      <div class="w-[36%]">
-        <div class="h-32 w-32"></div>
+      <div class="flex w-[15%] items-end justify-end pr-[3%]">
+        <a href="./signIn.html">Giriş Yap</a>
       </div>
     </header>
   </body>
