header is finished

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <header
-      class="flex flex-row items-center justify-center bg-green-100 text-center min-h-[100px]"
+      class="flex min-h-[100px] flex-row items-center justify-center bg-green-100 text-center"
     >
       <!-- logo -->
       <div class="w-[28%] pl-[3%]">
@@ -22,16 +22,32 @@
       <!-- navbar -->
       <nav class="flex w-[57%] items-center justify-center">
         <ul class="flex flex-row">
-          <li>Hakkımızda</li>
-          <li>Hakkımızda</li>
-          <li>Hakkımızda</li>
-          <li>Hakkımızda</li>
-          <li>Hakkımızda</li>
+          <div
+            class="rounded-full pl-3 pr-3 pt-1 pb-1 hover:bg-green-500 hover:text-white"
+          >
+            <a href="./blog.html"><li class="italic">Hakkımızda</li></a>
+          </div>
+          &nbsp;&nbsp;
+          <div
+            class="rounded-full pl-3 pr-3 pt-1 pb-1 hover:bg-green-500 hover:text-white"
+          >
+            <a href="./aboutUs.html"><li class="italic">Blog</li></a>
+          </div>
+          &nbsp;&nbsp;
+          <div
+            class="rounded-full pl-3 pr-3 pt-1 pb-1 hover:bg-green-500 hover:text-white"
+          >
+            <a href="./contactUs.html"><li class="italic">İletişim</li></a>
+          </div>
         </ul>
       </nav>
       <!-- log in -->
-      <div class="flex w-[15%] items-end justify-end pr-[3%]">
-        <a href="./signIn.html">Giriş Yap</a>
+      <div
+        class="mr-[3%] flex w-[15%] items-end justify-end"
+      >
+        <div class="rounded-full pl-3 pr-3 pt-1 pb-1 hover:bg-cyan-300 hover:text-white">
+          <a href="./signIn.html">Giriş Yap</a>
+        </div>
       </div>
     </header>
   </body>
