--- a/src/index.html
+++ b/src/index.html
@@ -42,13 +42,52 @@
         </ul>
       </nav>
       <!-- log in -->
-      <div
-        class="mr-[3%] flex w-[15%] items-end justify-end"
-      >
-        <div class="rounded-full pl-3 pr-3 pt-1 pb-1 hover:bg-cyan-300 hover:text-white">
+      <div class="mr-[3%] flex w-[15%] items-end justify-end">
+        <div
+          class="rounded-full pl-3 pr-3 pt-1 pb-1 hover:bg-cyan-300 hover:text-white"
+        >
           <a href="./signIn.html">Giriş Yap</a>
         </div>
       </div>
     </header>
+
+    <main class="h-[800px] w-full bg-cyan-50"></main>
+
+    <footer class="h-auto w-full bg-green-100">
+      <div class="flex flex-row items-center justify-center pl-[5%] pt-[5%] pb-[5%]">
+        <!-- pages -->
+        <div class="flex w-[25%] items-center justify-center">
+          <ul class="pr-[10%]">
+            <li class="p-0 text-lg font-[600]">Sayfalar</li>
+            <hr class="mb-[15%] w-32 border-green-500" />
+            <li class="mb-[5%]">
+              <div
+                class="rounded-full pr-2 pt-1 pb-1 hover:ml-[5%] hover:w-auto hover:bg-green-500 hover:pl-3 hover:text-center hover:text-white"
+              >
+                <a href="./aboutUs.html">Hakkımızda</a>
+              </div>
+            </li>
+            <li class="mb-[5%]">
+              <div
+                class="rounded-full pr-3 pt-1 pb-1 hover:ml-[5%] hover:w-auto hover:bg-green-500 hover:pl-3 hover:text-center hover:text-white"
+              >
+                <a href="./blog.html">Blog</a>
+              </div>
+            </li>
+            <li
+              class="mb-[5%]"
+            >
+              <div class="rounded-full pr-3 pt-1 pb-1 hover:ml-[5%] hover:w-full hover:bg-green-500 hover:pl-3 hover:text-white hover:text-center">
+                <a href="./contactUs.html">İletişim</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <!-- logo -->
+        <div class="w-[50%]"></div>
+        <!-- address -->
+        <div class="w-[25%]"></div>
+      </div>
+    </footer>
   </body>
 </html>
