footer is finished

--- a/src/index.html
+++ b/src/index.html
@@ -86,22 +86,22 @@
           </ul>
         </div>
         <!-- logo -->
-        <div class="flex md:w-[40%] mobile-l:w-[30%] justify-center">
+        <div class="flex justify-center mobile-l:w-[30%] md:w-[40%]">
           <a href="./index.html"
             ><img width="400" src="./img/logo.png" alt="logo.png"
           /></a>
         </div>
         <!-- address -->
-        <div
-          class="flex md:w-[35%] mobile-l:w-[45%] flex-col items-center"
-        >
-          <div class="mr-[10%] md:w-[65%] mobile-l:w-[100%] text-right">
+        <div class="flex flex-col items-center mobile-l:w-[45%] md:w-[35%]">
+          <div class="mr-[10%] text-right mobile-l:w-[100%] md:w-[65%]">
             <p class="text-lg font-[600]">Adres</p>
             <hr class="mb-[10%] w-auto border-green-500" />
-            <address>
-              Lorem Mah. Ipsum Dolor Cad. Sit Amet Sokak No: 4
-              Consectetur/ADİPİSİCİNG
-            </address>
+            <a href="https://www.google.com/maps" target="_blank">
+              <address>
+                Lorem Mah. Ipsum Dolor Cad. Sit Amet Sokak No: 4
+                Consectetur/ADİPİSİCİNG
+              </address>
+            </a>
           </div>
         </div>
       </div>
