--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,34 @@
       </div>
     </header>
 
-    <main class="h-[800px] w-full bg-cyan-50"></main>
+    <main class="h-[800px] w-full bg-cyan-50">
+      <section>
+        <div class="main-slider-item">
+          <div class="min-h-[100%]: absolute min-w-[100%]">
+            <video muted loop playsinline autoplay class="h-[100%] w-[100%]">
+              <source
+                src="./video/training-with-ropes.webm"
+                type="video/webm"
+              />
+            </video>
+          </div>
+          <div
+            class="absolute flex flex-col items-center justify-center pt-[30%] text-center mobile-s:pl-[8%] mobile-m:pl-[13%] md:pl-[22%] lg:pl-[17%] xl:pl-[10%] mobile-l:pl-[18%]"
+          >
+            <p
+              class="text-cyan-300 antialiased mobile-s:text-[30px] md:text-[50px] lg:text-[70px] xl:text-[100px]"
+            >
+              FİT BİR YAZILIMCI !
+            </p>
+            <p
+              class="text-center text-cyan-300 antialiased mobile-s:text-[15px] md:text-[20px] lg:text-[40px] xl:text-[70px]"
+            >
+              Üzerinde çalışacağın en iyi proje sensin.
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
 
     <footer class="h-auto w-full bg-green-100">
       <div
