--- a/src/index.html
+++ b/src/index.html
@@ -63,18 +63,22 @@
             </video>
           </div>
           <div
-            class="absolute flex flex-col items-center justify-center pt-[30%] text-center mobile-s:pl-[8%] mobile-m:pl-[13%] md:pl-[22%] lg:pl-[17%] xl:pl-[10%] mobile-l:pl-[18%]"
+            class="absolute flex w-full flex-col items-center justify-center pt-[30%] text-center"
           >
-            <p
-              class="text-cyan-300 antialiased mobile-s:text-[30px] md:text-[50px] lg:text-[70px] xl:text-[100px]"
+            <div
+              class="flex h-full w-full flex-col items-center justify-center text-center"
             >
-              FİT BİR YAZILIMCI !
-            </p>
-            <p
-              class="text-center text-cyan-300 antialiased mobile-s:text-[15px] md:text-[20px] lg:text-[40px] xl:text-[70px]"
-            >
-              Üzerinde çalışacağın en iyi proje sensin.
-            </p>
+              <p
+                class="w-[100%] text-center text-xl text-cyan-300 antialiased md:text-4xl"
+              >
+                FİT BİR YAZILIMCI !
+              </p>
+              <p
+                class="w-[100%] text-center mobile-s:text-[15px] mobile-m:text-xl text-cyan-300 antialiased md:text-4xl"
+              >
+                Üzerinde çalışacağın en iyi proje sensin.
+              </p>
+            </div>
           </div>
         </div>
       </section>
