--- a/src/index.html
+++ b/src/index.html
@@ -69,12 +69,12 @@
               class="flex h-full w-full flex-col items-center justify-center text-center"
             >
               <p
-                class="w-[100%] text-center text-xl text-cyan-300 antialiased md:text-4xl"
+                class="w-[100%] text-center text-xl text-green-500 antialiased md:text-4xl"
               >
                 FİT BİR YAZILIMCI !
               </p>
               <p
-                class="w-[100%] text-center mobile-s:text-[15px] mobile-m:text-xl text-cyan-300 antialiased md:text-4xl"
+                class="w-[100%] text-center mobile-s:text-[15px] mobile-m:text-xl text-green-500 antialiased md:text-4xl"
               >
                 Üzerinde çalışacağın en iyi proje sensin.
               </p>
