--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
           <div class="min-h-[100%]: absolute min-w-[100%]">
             <video muted loop playsinline autoplay class="h-[100%] w-[100%]">
               <source
-                src="./video/training-with-ropes.webm"
+                src="./video/clapping-hand.webm"
                 type="video/webm"
               />
             </video>
