--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,10 @@
           .getElementById("main-video")
           .scrollIntoView({ behavior: "smooth" });
       }
+
+      function goMain() {
+        document.getElementById("main").scrollIntoView({ behavior: "smooth" });
+      }
     </script>
   </head>
   <body onload="goVideo()">
@@ -59,10 +63,10 @@
       </div>
     </header>
 
-    <main class="h-[800px] w-full bg-cyan-50">
-      <section>
-        <div class="main-slider-item">
-          <div class="min-h-[105%]: absolute min-w-[105%]">
+    <main class="w-full bg-cyan-50">
+      <section class="static">
+        <div>
+          <div class="absolute min-h-[105%] min-w-[100%]">
             <video
               id="main-video"
               muted
@@ -93,9 +97,23 @@
             </div>
           </div>
 
-          
+          <div
+            class="absolute flex w-full flex-col items-center justify-center text-center mobile-s:pt-[50%] md:pt-[40%]"
+          >
+            <p
+              onclick="goMain()"
+              class="text-green-500 hover:text-cyan-300 mobile-s:text-[50] md:text-[100px]"
+            >
+              ꜜ
+            </p>
+          </div>
         </div>
       </section>
+      <article class="pt-[52%]">
+        <div id="main">
+          <div class="h-32 w-32 bg-cyan-300"></div>
+        </div>
+      </article>
     </main>
 
     <footer class="h-auto w-full bg-green-100">
