--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
   </head>
   <body onload="goVideo()">
     <header
+      id="header"
       class="flex min-h-[100px] flex-row items-center justify-center bg-green-100 text-center"
     >
       <!-- logo -->
@@ -66,7 +67,7 @@
     <main class="w-full bg-cyan-50">
       <section class="static">
         <div>
-          <div class="absolute min-h-[105%] min-w-[100%]">
+          <div class="absolute min-h-[100%] min-w-[100%]">
             <video
               id="main-video"
               muted
