--- a/src/aboutUs.html
+++ b/src/aboutUs.html
@@ -1,16 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/dist/output.css" rel="stylesheet" />
 
     <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
 
     <title>Hakkımızda | Fit Yazılım</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header
+      id="header"
+      class="flex min-h-[100px] flex-row items-center justify-center bg-green-100 text-center"
+    >
+      <!-- logo -->
+      <div class="w-[28%] pl-[3%]">
+        <a href="./index.html">
+          <img width="200" src="./img/logo.png" alt="logo.png" />
+        </a>
+      </div>
+      <!-- navbar -->
+      <nav class="flex w-[57%] items-center justify-center">
+        <ul class="flex flex-row">
+          <div
+            class="rounded-full pl-3 pr-3 pt-1 pb-1 hover:bg-green-500 hover:text-white"
+          >
+            <a href="./aboutUs.html"><li class="italic">Hakkımızda</li></a>
+          </div>
+          &nbsp;&nbsp;
+          <div
+            class="rounded-full pl-3 pr-3 pt-1 pb-1 hover:bg-green-500 hover:text-white"
+          >
+            <a href="./blog.html"><li class="italic">Blog</li></a>
+          </div>
+          &nbsp;&nbsp;
+          <div
+            class="rounded-full pl-3 pr-3 pt-1 pb-1 hover:bg-green-500 hover:text-white"
+          >
+            <a href="./contactUs.html"><li class="italic">İletişim</li></a>
+          </div>
+        </ul>
+      </nav>
+      <!-- log in -->
+      <div class="mr-[3%] flex w-[15%] items-end justify-end">
+        <div
+          class="rounded-full pl-3 pr-3 pt-1 pb-1 hover:bg-cyan-300 hover:text-white"
+        >
+          <a href="./signIn.html">Giriş Yap</a>
+        </div>
+      </div>
+    </header>
+
+    <footer class="h-auto w-full bg-green-100">
+      <div
+        class="flex flex-row items-center justify-center pl-[5%] pt-[5%] pb-[5%]"
+      >
+        <!-- pages -->
+        <div class="flex w-[25%] items-center justify-center">
+          <ul class="pr-[10%]">
+            <li class="p-0 text-lg font-[600]">Sayfalar</li>
+            <hr class="mb-[15%] w-32 border-green-500" />
+            <li class="mb-[5%]">
+              <div
+                class="rounded-full pr-2 pt-1 pb-1 hover:ml-[5%] hover:w-auto hover:bg-green-500 hover:pl-3 hover:text-center hover:text-white"
+              >
+                <a href="./aboutUs.html">Hakkımızda</a>
+              </div>
+            </li>
+            <li class="mb-[5%]">
+              <div
+                class="rounded-full pr-3 pt-1 pb-1 hover:ml-[5%] hover:w-auto hover:bg-green-500 hover:pl-3 hover:text-center hover:text-white"
+              >
+                <a href="./blog.html">Blog</a>
+              </div>
+            </li>
+            <li class="mb-[5%]">
+              <div
+                class="rounded-full pr-3 pt-1 pb-1 hover:ml-[5%] hover:w-full hover:bg-green-500 hover:pl-3 hover:text-center hover:text-white"
+              >
+                <a href="./contactUs.html">İletişim</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <!-- logo -->
+        <div class="flex justify-center mobile-l:w-[30%] md:w-[40%]">
+          <a href="./index.html"
+            ><img width="400" src="./img/logo.png" alt="logo.png"
+          /></a>
+        </div>
+        <!-- address -->
+        <div class="flex flex-col items-center mobile-l:w-[45%] md:w-[35%]">
+          <div class="mr-[10%] text-right mobile-l:w-[100%] md:w-[65%]">
+            <p class="text-lg font-[600]">Adres</p>
+            <hr class="mb-[10%] w-auto border-green-500" />
+            <a href="https://www.google.com/maps" target="_blank">
+              <address>
+                Lorem Mah. Ipsum Dolor Cad. Sit Amet Sokak No: 4
+                Consectetur/ADİPİSİCİNG
+              </address>
+            </a>
+          </div>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
