--- a/src/aboutUs.html
+++ b/src/aboutUs.html
@@ -53,6 +53,8 @@
       </div>
     </header>
 
+    <main></main>
+
     <footer class="h-auto w-full bg-green-100">
       <div
         class="flex flex-row items-center justify-center pl-[5%] pt-[5%] pb-[5%]"
