--- a/src/aboutUs.html
+++ b/src/aboutUs.html
@@ -53,7 +53,15 @@
       </div>
     </header>
 
-    <main></main>
+    <main class="flex items-center justify-center text-center w-full bg-cyan-50">
+      <div
+        class="flex items-center justify-center rounded-tl-full rounded-br-full bg-green-500 text-center hover:bg-cyan-300 mt-[5%] mb-[5%]"
+      >
+        <p class="pl-12 pr-12 pt-6 pb-6 text-3xl text-white antialiased">
+          Neyi Amaçlıyoruz?
+        </p>
+      </div>
+    </main>
 
     <footer class="h-auto w-full bg-green-100">
       <div
