--- a/src/blog.html
+++ b/src/blog.html
@@ -53,7 +53,7 @@
       </div>
     </header>
 
-    <main></main>
+    <main class="w-full bg-cyan-50"></main>
 
     <footer class="h-auto w-full bg-green-100">
       <div
