change in footer

--- a/src/aboutUs.html
+++ b/src/aboutUs.html
@@ -103,25 +103,31 @@
             <li class="p-0 text-lg font-[600]">Sayfalar</li>
             <hr class="mb-[15%] w-32 border-green-500" />
             <li class="mb-[5%]">
-              <div
-                class="rounded-full pr-2 pt-1 pb-1 hover:ml-[5%] hover:w-auto hover:bg-green-500 hover:pl-3 hover:text-center hover:text-white"
-              >
-                <a href="./aboutUs.html">Hakkımızda</a>
-              </div>
+              <a href="./aboutUs.html">
+                <div
+                  class="rounded-full pr-2 pt-1 pb-1 hover:ml-[5%] hover:w-auto hover:bg-green-500 hover:pl-3 hover:text-center hover:text-white"
+                >
+                  Hakkımızda
+                </div>
+              </a>
             </li>
             <li class="mb-[5%]">
-              <div
-                class="rounded-full pr-3 pt-1 pb-1 hover:ml-[5%] hover:w-auto hover:bg-green-500 hover:pl-3 hover:text-center hover:text-white"
-              >
-                <a href="./blog.html">Blog</a>
-              </div>
+              <a href="./blog.html">
+                <div
+                  class="rounded-full pr-3 pt-1 pb-1 hover:ml-[5%] hover:w-auto hover:bg-green-500 hover:pl-3 hover:text-center hover:text-white"
+                >
+                  Blog
+                </div>
+              </a>
             </li>
             <li class="mb-[5%]">
-              <div
-                class="rounded-full pr-3 pt-1 pb-1 hover:ml-[5%] hover:w-full hover:bg-green-500 hover:pl-3 hover:text-center hover:text-white"
-              >
-                <a href="./contactUs.html">İletişim</a>
-              </div>
+              <a href="./contactUs.html">
+                <div
+                  class="rounded-full pr-3 pt-1 pb-1 hover:ml-[5%] hover:w-full hover:bg-green-500 hover:pl-3 hover:text-center hover:text-white"
+                >
+                  İletişim
+                </div>
+              </a>
             </li>
           </ul>
         </div>
