--- a/src/contactUs.html
+++ b/src/contactUs.html
@@ -53,7 +53,9 @@
       </div>
     </header>
 
-    <main class="w-full bg-cyan-50"></main>
+    <main class="w-full bg-cyan-50">
+      <section><div><img src="./img/" alt="gym-saloon"></div></section>
+    </main>
 
     <footer class="h-auto w-full bg-green-100">
       <div
