--- a/src/contactUs.html
+++ b/src/contactUs.html
@@ -54,7 +54,11 @@
     </header>
 
     <main class="w-full bg-cyan-50">
-      <section><div><img src="./img/" alt="gym-saloon"></div></section>
+      <section>
+        <div class="pt-[15%]">
+          <img src="./img/gym-saloon.webp" width="300" alt="gym-saloon" />
+        </div>
+      </section>
     </main>
 
     <footer class="h-auto w-full bg-green-100">
