--- a/src/aboutUs.html
+++ b/src/aboutUs.html
@@ -60,7 +60,7 @@
         class="mt-[10%] mb-[15%] flex flex-col items-center justify-center text-center"
       >
         <div
-          class="mb-[5%] flex w-[25%] items-center justify-center rounded-tl-full rounded-br-full bg-[#A27B5C] text-center hover:bg-[#BF9270]"
+          class="mb-[5%] flex min-w-[25%] max-w-[80%] items-center justify-center rounded-tl-full rounded-br-full bg-[#A27B5C] text-center hover:bg-[#BF9270]"
         >
           <p class="pl-12 pr-12 pt-6 pb-6 text-3xl text-white antialiased">
             Neyi Amaçlıyoruz?
@@ -70,7 +70,7 @@
         <div
           class="flex w-[80%] flex-row items-center justify-center text-center"
         >
-          <div class="mr-24">
+          <div class="invisible absolute mr-24 md:visible md:static">
             <img class="rounded-full" src="./img/coffee.jpeg" alt="coffee" />
           </div>
           <div class="w-[100%]">
